--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Oremos Católico em formato digital. Tenha o conteúdo do Oremos físico e mais, num app simples e prático para rezar em qualquer lugar." />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <title>Oremos católico</title>
+    <link rel="shortcut icon" href="images/icons/Oremos_catolico_favicon.ico" type="image/x-icon">
+    <title>Oremos católico - Ínicio</title>
 </head>
     <body>
     <header>
@@ -25,7 +28,7 @@
                 <a href="https://play.google.com/store/apps/details?id=com.samuel.oremoschanganapt" target="_blank" download><button id="buttonToPlayStore">Baixar na Play Store</button></a>
             </div>
             <div>
-                <img src="images/OremosS22.png" alt="Android app home image" height="511" width="230">
+                <img src="images/OremosS22.png" loading="lazy" alt="Android app home image" height="511" width="230">
             </div>
         </div>
 
@@ -47,12 +50,12 @@
         <div id="main-bottom">
             <h2>Capturas de tela</h2>
             <div class="scrolled">
-                <img src="images/home.jpeg" alt="globe (offline)" height="320">
-                <img src="images/agroupped-songs.jpeg" alt="globe (offline)" height="320">
-                <img src="images/songs.jpeg" alt="globe (offline)" height="320">
-                <img src="images/configurations.jpeg" alt="globe (offline)" height="320">
-                <img src="images/more-pages.jpeg" alt="globe (offline)" height="320">
-                <img src="images/santoral.jpeg" alt="globe (offline)" height="320">
+                <img src="images/home.jpeg" alt="globe (offline)" loading="lazy" height="320">
+                <img src="images/agroupped-songs.jpeg" alt="globe (offline)" loading="lazy" height="320">
+                <img src="images/songs.jpeg" alt="globe (offline)" loading="lazy" height="320">
+                <img src="images/configurations.jpeg" alt="globe (offline)" loading="lazy" height="320">
+                <img src="images/more-pages.jpeg" alt="globe (offline)" loading="lazy" height="320">
+                <img src="images/santoral.jpeg" alt="globe (offline)" loading="lazy" height="320">
             </div>
         </div>
     </main>
