--- a/pages/about.html
+++ b/pages/about.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Saiba mais sobre o Oremos Católico — a versão digital do Oremos físico, que leva orações e leituras a qualquer lugar, fortalecendo a fé." />
     <link rel="stylesheet" href="../style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../styles/about.css">
-    <title>Sobre Oremos católico</title>
+    <title>Oremos católico - Sobre</title>
 </head>
 <body>
 <header>
