--- a/pages/download.html
+++ b/pages/download.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Baixe o app Oremos Católico no seu dispositivo. Reze, leia e medite com o conteúdo do Oremos físico e recursos extra, em qualquer momento." />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/download.css">
-    <title>Title</title>
+    <title>Oremos católico - Download</title>
 </head>
     <body>
     <header>
@@ -30,8 +32,7 @@
 
                     <a href="https://play.google.com/store/apps/details?id=com.samuel.oremoschanganapt" target="_blank" download><button id="buttonToPlayStore">Baixar na Play Store</button></a>
 
-                    <a href="../downloads/android/Oremos_Changana_-_PT_v4.1.0.apk" download><button id="download-oremos-apk">Baixar o APK</button></a>
-
+                    <a href="../downloads/android/Oremos_Changana_-_PT_v4.1.1.apk" download><button id="download-oremos-apk">Baixar o APK</button></a>
                 </div>
             </div>
         </div>
