--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Oremos Católico em formato digital. Tenha o conteúdo do Oremos físico e mais, num app simples e prático para rezar em qualquer lugar." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/icons/Oremos_catolico_favicon.ico" type="image/x-icon">
     <title>Oremos católico - Ínicio</title>
