--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="main-top">
             <div id="site-description-div">
                 <h1>Oremos Católico</h1>
-                <p>Tenha o poder do Oremos nas suas mãos</p>
+                <p>O Oremos físico, agora sempre consigo no seu dispositivo.</p>
                 <a href="https://play.google.com/store/apps/details?id=com.samuel.oremoschanganapt" target="_blank" download><button id="buttonToPlayStore">Baixar na Play Store</button></a>
             </div>
             <div>
