--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Oremos Católico em formato digital. Tenha o conteúdo do Oremos físico e mais, num app simples e prático para rezar em qualquer lugar." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="wHQi1NhcCBXbTX-RROO99pJ-_BjNflm41KObw9NFS4s" />
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/icons/Oremos_catolico_favicon.ico" type="image/x-icon">
     <title>Oremos católico - Ínicio</title>
