--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Saiba mais sobre o Oremos Católico — a versão digital do Oremos físico, que leva orações e leituras a qualquer lugar, fortalecendo a fé." />
@@ -22,27 +22,29 @@
 </header>
 
 <main>
-    <div id="about-app-content">
+    <section id="about-app-content">
         <h2 id="about-app-title">Sobre aplicativo Oremos católico</h2>
         <br>
         <p id="about-app-text">O Oremos Católico é um aplicativo que traz o conteúdo do Oremos físico — e muito mais — de forma simples e prática. É a solução ideal para quem não tem um Oremos físico por perto ou se encontra numa situação em que não possa usá-lo, permitindo rezar e meditar em qualquer lugar.</p>
-    </div>
+    </section>
 
-    <div id="mission-content">
+    <section id="mission-content">
         <h2>Missão</h2>
         <p>Produzir aplicações Oremos em várias línguas e plataformas, para que cada comunidade possa rezar na sua própria língua materna, fortalecendo a fé e preservando a cultura.</p>
-    </div>
+    </section>
 
-    <div class="simple-card">
+    <section class="simple-card">
         <h2>Contribua com código</h2>
-        <p>Se é programador e quer ajudar a melhorar o Oremos Católico, visite o nosso repositório no <a href="https://github.com/samuelsumbane/OremosChanganaPortugues.git">Github</a></p>
-    </div>
+        <p>Se é programador e quer ajudar a melhorar o Oremos Católico, visite o nosso repositório no Github.</p>
 
-    <div class="simple-card">
+        <a href="https://github.com/samuelsumbane/OremosChanganaPortugues.git" class="link-to-outline-btn">Contribuir</a>
+    </section>
+
+    <section class="simple-card">
         <h2>Apoie o Oremos Católico</h2>
         <p>As suas doações ajudam a manter e expandir este projeto para mais comunidades.</p>
-        <button>Fazer uma doação</button>
-    </div>
+        <a href="" class="link-to-outline-btn">Doar</a>
+    </section>
 
 </main>
 <footer>
@@ -51,14 +53,13 @@
             <img src="../images/icons/telephone.svg" alt="phone" height="16">
             <p>+258 865230661 / +258 833597867</p>
         </div>
-
         <div>
             <img src="../images/icons/whatsapp.svg" alt="whatsapp" height="16">
             <p>+258 865230661</p>
         </div>
         <div>
             <img src="../images/icons/mailbox.svg" alt="mail" height="16">
-            <p><a href="mailto:samuelsumbane143@gmail.com" class="link-like-text">samuelsumbane143@gmail.com</a> </p>
+            <a href="mailto:samuelsumbane143@gmail.com" class="link-like-text">samuelsumbane143@gmail.com</a>
         </div>
     </div>
 
