--- a/pages/download.html
+++ b/pages/download.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Baixe o app Oremos Católico no seu dispositivo. Reze, leia e medite com o conteúdo do Oremos físico e recursos extra, em qualquer momento." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/about.css">
     <link rel="stylesheet" href="../styles/download.css">
     <title>Oremos católico - Download</title>
 </head>
@@ -37,24 +38,23 @@
             </div>
         </div>
         <br>
-            <div class="comments">
+            <section class="comments">
                 <h3>Comentários dos usuários que usam o aplicativo.</h3>
-                <div class="user-comment">
+                <section class="user-comment">
                     <div>
                         <h3>O.M</h3>
                         <h4 class="stars">⭐ ⭐ ⭐ ⭐ ⭐</h4>
                     </div>
                     <p>Fico feliz em ter este livro no meu Smartphone, consigo rezar em qualquer momento e lugar. Continuem a trabalhar para melhorar mais.</p>
-                </div>
-                <div class="user-comment">
+                </section>
+                <section class="user-comment">
                     <div>
                         <h3>S.N</h3>
                         <h4 class="stars">⭐ ⭐ ⭐ ⭐ ⭐</h4>
                     </div>
                     <p>Louvado seja Deus para sempre. Muito obrigado por esta obra e iniciativa. Continue fazendo mais trabalhos semelhantes noutras línguas.</p>
-                </div>
-            </div>
-
+                </section>
+            </section>
 
     </main>
     <footer>
@@ -70,7 +70,7 @@
             </div>
             <div>
                 <img src="../images/icons/mailbox.svg" alt="mail" height="16">
-                <p><a href="mailto:samuelsumbane143@gmail.com" class="link-like-text">samuelsumbane143@gmail.com</a> </p>
+                <a href="mailto:samuelsumbane143@gmail.com" class="link-like-text">samuelsumbane143@gmail.com</a>
             </div>
         </div>
 
