--- a/pages/download.html
+++ b/pages/download.html
@@ -14,13 +14,13 @@
         <nav>
             <h2><a href="../index.html" class="link-like-text">Oremos Católico</a></h2>
 
-            <ul>
+            <ul class="link-list">
                 <li><a href="../index.html">Ínicio</a></li>
                 <li><a href="../pages/about.html">Sobre</a></li>
                 <li><a href="../pages/download.html" class="active-page">Download</a></li>
             </ul>
             <button class="changeMode"></button>
-
+            <button id="menu-button"></button>
         </nav>
     </header>
     <main>
