--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <title>Oremos católico - Ínicio</title>
 </head>
     <body>
-    <header>
-        <nav>
-            <h2><a href="index.html" class="link-like-text">Oremos Católico</a></h2>
-            <ul>
-                <li><a href="index.html" class="active-page">Ínicio</a></li>
-                <li><a href="pages/about.html">Sobre</a></li>
-                <li><a href="pages/download.html">Download</a></li>
-            </ul>
-            <button class="changeMode"></button>
-        </nav>
-    </header>
+        <header>
+            <nav>
+                <h2><a href="index.html" class="link-like-text">Oremos Católico</a></h2>
+                <ul class="link-list">
+                    <li><a href="index.html" class="active-page">Ínicio</a></li>
+                    <li><a href="pages/about.html">Sobre</a></li>
+                    <li><a href="pages/download.html">Download</a></li>
+                </ul>
+                <button class="changeMode"></button>
+                <button id="menu-button"></button>
+            </nav>
+        </header>
+
     <main>
         <div id="main-top">
             <div id="site-description-div">
