--- a/pages/about.html
+++ b/pages/about.html
@@ -12,12 +12,14 @@
 <header>
     <nav>
         <h2><a href="../index.html" class="link-like-text">Oremos Católico</a></h2>
-        <ul>
+        <ul class="link-list">
             <li><a href="../index.html">Ínicio</a></li>
             <li><a href="../pages/about.html" class="active-page">Sobre</a></li>
             <li><a href="../pages/download.html">Download</a></li>
         </ul>
         <button class="changeMode"></button>
+        <button id="menu-button"></button>
+
     </nav>
 </header>
 
