--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/icons/Oremos_catolico_favicon.ico" type="image/x-icon">
     <title>Oremos católico - Ínicio</title>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5681392628142531"
+            crossorigin="anonymous"></script>
 </head>
     <body>
         <header>
