--- a/pages/download.html
+++ b/pages/download.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../styles/about.css">
     <link rel="stylesheet" href="../styles/download.css">
     <title>Oremos católico - Download</title>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5681392628142531"
+            crossorigin="anonymous"></script>
 </head>
     <body>
     <header>
