--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../styles/about.css">
     <title>Oremos católico - Sobre</title>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5681392628142531"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <header>
