Publishing v5.0 in Android, Windows and Linux (deb)

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Oremos Católico em formato digital. Tenha o conteúdo do Oremos físico e mais, num app simples e prático para rezar em qualquer lugar." />
+    <meta name="description" content="Oremos Changana-PT em formato digital. Tenha o conteúdo do Oremos físico e mais, num app simples e prático para rezar em qualquer lugar." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="wHQi1NhcCBXbTX-RROO99pJ-_BjNflm41KObw9NFS4s" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/icons/Oremos_catolico_favicon.ico" type="image/x-icon">
-    <title>Oremos católico - Ínicio</title>
+    <link rel="shortcut icon" href="images/icons/Oremos_favicon.ico" type="image/x-icon">
+    <title>Oremos Changana-PT - Ínicio</title>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5681392628142531"
             crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
     <body>
         <header>
             <nav>
-                <h2><a href="index.html" class="link-like-text">Oremos Católico</a></h2>
+                <h2><a href="index.html" class="link-like-text">Oremos Changana-PT</a></h2>
                 <ul class="link-list">
                     <li><a href="index.html" class="active-page">Ínicio</a></li>
                     <li><a href="pages/about.html">Sobre</a></li>
@@ -30,12 +30,12 @@
     <main>
         <div id="main-top">
             <div id="site-description-div">
-                <h1>Oremos Católico</h1>
+                <h1>Oremos Changana-PT</h1>
                 <p>O Oremos físico, agora sempre consigo no seu dispositivo.</p>
                 <a href="https://play.google.com/store/apps/details?id=com.samuel.oremoschanganapt" target="_blank" download><button id="buttonToPlayStore">Baixar na Play Store</button></a>
             </div>
             <div>
-                <img src="images/OremosS22.png" loading="lazy" alt="Android app home image" height="511" width="230">
+                <img src="images/Oremos_Home.jpeg" loading="lazy" alt="Android app home image" height="445" width="204">
             </div>
         </div>
 
@@ -46,7 +46,7 @@
             </div>
             <div class="functionality">
                 <img src="images/icons/file-music.svg" alt="song" height="30">
-                <p>Mais de 37 cânticos novos</p>
+                <p>48 cânticos novos</p>
             </div>
             <div class="functionality">
                 <img src="images/icons/globe.svg" alt="globe (offline)" height="30">
@@ -58,12 +58,11 @@
             <h2>Capturas de tela</h2>
 
             <div class="scrolled">
-                <img src="images/home.jpeg" alt="globe (offline)" loading="lazy" height="320">
-                <img src="images/agroupped-songs.jpeg" alt="globe (offline)" loading="lazy" height="320">
-                <img src="images/songs.jpeg" alt="globe (offline)" loading="lazy" height="320">
-                <img src="images/configurations.jpeg" alt="globe (offline)" loading="lazy" height="320">
-                <img src="images/more-pages.jpeg" alt="globe (offline)" loading="lazy" height="320">
-                <img src="images/santoral.jpeg" alt="globe (offline)" loading="lazy" height="320">
+                <img src="images/Oremos%20AgroupedSongs.jpeg" alt="Grouped Songs page" loading="lazy" height="320">
+                <img src="images/songs.jpeg" alt="songs page" loading="lazy" height="320">
+                <img src="images/Oremos_Prays.jpeg" alt="prays" loading="lazy" height="320">
+                <img src="images/Oremos%20MorePages.jpeg" alt="morePages" loading="lazy" height="320">
+                <img src="images/santoral.jpeg" alt="santoral" loading="lazy" height="320">
             </div>
         </div>
     </main>
@@ -89,7 +88,7 @@
             <div class="footer-top"></div>
             <div class="footer-bottom">
                 <a href="https://samuelsumbane.github.io/oremosChaganaPtTermos/" target="_blank" class="link-like-text">Política de Privacidade</a>
-                <p>© 2025 Oremos Católico. Todos os direitos reservados.</p>
+                <p>© 2025 Oremos Changana-PT. Todos os direitos reservados.</p>
             </div>
         </div>
 
