--- a/pages/about.html
+++ b/pages/about.html
@@ -2,11 +2,13 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Saiba mais sobre o Oremos Católico — a versão digital do Oremos físico, que leva orações e leituras a qualquer lugar, fortalecendo a fé." />
+    <meta name="description" content="Saiba mais sobre o Oremos Changana-PT — a versão digital do Oremos físico, que leva orações e leituras a qualquer lugar, fortalecendo a fé." />
     <link rel="stylesheet" href="../style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../styles/about.css">
-    <title>Oremos católico - Sobre</title>
+    <link rel="shortcut icon" href="../images/icons/Oremos_favicon.ico" type="image/x-icon">
+
+    <title>Oremos Changana-PT - Sobre</title>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5681392628142531"
             crossorigin="anonymous"></script>
@@ -14,7 +16,7 @@
 <body>
 <header>
     <nav>
-        <h2><a href="../index.html" class="link-like-text">Oremos Católico</a></h2>
+        <h2><a href="../index.html" class="link-like-text">Oremos Changana-PT</a></h2>
         <ul class="link-list">
             <li><a href="../index.html">Ínicio</a></li>
             <li><a href="../pages/about.html" class="active-page">Sobre</a></li>
@@ -28,9 +30,9 @@
 
 <main>
     <section id="about-app-content">
-        <h2 id="about-app-title">Sobre aplicativo Oremos católico</h2>
+        <h2 id="about-app-title">Sobre aplicativo Oremos Changana-PT</h2>
         <br>
-        <p id="about-app-text">O Oremos Católico é um aplicativo que traz o conteúdo do Oremos físico — e muito mais — de forma simples e prática. É a solução ideal para quem não tem um Oremos físico por perto ou se encontra numa situação em que não possa usá-lo, permitindo rezar e meditar em qualquer lugar.</p>
+        <p id="about-app-text">O Oremos Changana-PT é um aplicativo que traz o conteúdo do Oremos físico — e muito mais — de forma simples e prática. É a solução ideal para quem não tem um Oremos físico por perto ou se encontra numa situação em que não possa usá-lo, permitindo rezar e meditar em qualquer lugar.</p>
     </section>
 
     <section id="mission-content">
@@ -40,15 +42,21 @@
 
     <section class="simple-card">
         <h2>Contribua com código</h2>
-        <p>Se é programador e quer ajudar a melhorar o Oremos Católico, visite o nosso repositório no Github.</p>
+        <p>Se é programador e quer ajudar a melhorar o Oremos Changana-PT, visite o nosso repositório no Github.</p>
 
         <a href="https://github.com/samuelsumbane/OremosChanganaPortugues.git" class="link-to-outline-btn">Contribuir</a>
     </section>
 
     <section class="simple-card">
-        <h2>Apoie o Oremos Católico</h2>
+        <h2>Apoie o Oremos Changana-PT</h2>
         <p>As suas doações ajudam a manter e expandir este projeto para mais comunidades.</p>
-        <a href="" class="link-to-outline-btn">Doar</a>
+<!--        <a href="" class="link-to-outline-btn">Doar</a>-->
+        <p>Pode doar por:</p>
+        <ul id="payment-options">
+            <li>Emola - 865230661</li>
+            <li>MBim - 1046225220</li>
+            <li>PayPal - samuelsumbane143@gmail.com</li>
+        </ul>
     </section>
 
 </main>
@@ -72,7 +80,7 @@
         <div class="footer-top"></div>
         <div class="footer-bottom">
             <a href="https://samuelsumbane.github.io/oremosChaganaPtTermos/" target="_blank" class="link-like-text">Política de Privacidade</a>
-            <p>© 2025 Oremos Católico. Todos os direitos reservados.</p>
+            <p>© 2025 Oremos Changana-PT. Todos os direitos reservados.</p>
         </div>
     </div>
 
