--- a/pages/download.html
+++ b/pages/download.html
@@ -2,12 +2,13 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Baixe o app Oremos Católico no seu dispositivo. Reze, leia e medite com o conteúdo do Oremos físico e recursos extra, em qualquer momento." />
+    <meta name="description" content="Baixe o app Oremos Changana-PT no seu dispositivo. Reze, leia e medite com o conteúdo do Oremos físico e recursos extra, em qualquer momento." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/about.css">
     <link rel="stylesheet" href="../styles/download.css">
-    <title>Oremos católico - Download</title>
+    <link rel="shortcut icon" href="../images/icons/Oremos_favicon.ico" type="image/x-icon">
+    <title>Oremos Changana-PT - Download</title>
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5681392628142531"
             crossorigin="anonymous"></script>
@@ -15,7 +16,7 @@
     <body>
     <header>
         <nav>
-            <h2><a href="../index.html" class="link-like-text">Oremos Católico</a></h2>
+            <h2><a href="../index.html" class="link-like-text">Oremos Changana-PT</a></h2>
 
             <ul class="link-list">
                 <li><a href="../index.html">Ínicio</a></li>
@@ -31,14 +32,34 @@
             <div class="platform">
                 <img src="../images/icons/android2.svg" alt="android platform" height="30">
                 <h3 class="platform-name">Android</h3>
-                <span>Oremos Changana - PT. Versão: 4.1.1</span>
+                <span>Oremos Changana-PT. Versão: 5.0/span>
                 <div class="download-buttons">
 
                     <a href="https://play.google.com/store/apps/details?id=com.samuel.oremoschanganapt" target="_blank" download><button id="buttonToPlayStore">Baixar na Play Store</button></a>
 
-                    <a href="../downloads/android/Oremos_Changana_-_PT_v4.1.1.apk" download><button id="download-oremos-apk">Baixar o APK</button></a>
+                    <a href="../downloads/android/Oremos%20Changana%20PT%20v5.0.apk" download><button class="download-oremos-button">Baixar o APK</button></a>
                 </div>
             </div>
+
+            <div class="platform">
+                <img src="../images/icons/windows.svg" alt="android platform" height="25">
+                <h3 class="platform-name">Windows</h3>
+                <span>Oremos Changana-PT. Versão: 5.0</span>
+                <div class="download-buttons">
+                    <a href="../downloads/windows/Oremos%20Changana%20PT-5.0.0.msi" download><button class="download-oremos-button">Baixar .Msi</button></a>
+                </div>
+            </div>
+
+            <div class="platform">
+                <img src="../images/icons/linux.svg" alt="android platform" height="32">
+                <h3 class="platform-name">Linux</h3>
+                <span>Oremos Changana-PT. Versão: 5.0</span>
+                <div class="download-buttons">
+                    <a href="../downloads/linux/oremos-changana-pt_5.0.0_amd64.deb" download><button class="download-oremos-button">Baixar .Deb</button></a>
+                </div>
+            </div>
+
+
         </div>
         <br>
             <section class="comments">
@@ -81,7 +102,7 @@
             <div class="footer-top"></div>
             <div class="footer-bottom">
                 <a href="https://samuelsumbane.github.io/oremosChaganaPtTermos/" target="_blank" class="link-like-text">Política de Privacidade</a>
-                <p>© 2025 Oremos Católico. Todos os direitos reservados.</p>
+                <p>© 2025 Oremos Changana-PT. Todos os direitos reservados.</p>
             </div>
         </div>
 
