Fix: Project wrong link

--- a/pages/about.html
+++ b/pages/about.html
@@ -44,7 +44,7 @@
         <h2>Contribua com código</h2>
         <p>Se é programador e quer ajudar a melhorar o Oremos Changana-PT, visite o nosso repositório no Github.</p>
 
-        <a href="https://github.com/samuelsumbane/OremosChanganaPortugues.git" class="link-to-outline-btn">Contribuir</a>
+        <a href="https://github.com/samuelsumbane/Oremos_Changana-PT" class="link-to-outline-btn">Contribuir</a>
     </section>
 
     <section class="simple-card">
