--- a/pages/download.html
+++ b/pages/download.html
@@ -32,7 +32,7 @@
             <div class="platform">
                 <img src="../images/icons/android2.svg" alt="android platform" height="30">
                 <h3 class="platform-name">Android</h3>
-                <span>Oremos Changana-PT. Versão: 5.0/span>
+                <span>Oremos Changana-PT. Versão: 5.0</span>
                 <div class="download-buttons">
 
                     <a href="https://play.google.com/store/apps/details?id=com.samuel.oremoschanganapt" target="_blank" download><button id="buttonToPlayStore">Baixar na Play Store</button></a>
@@ -46,7 +46,7 @@
                 <h3 class="platform-name">Windows</h3>
                 <span>Oremos Changana-PT. Versão: 5.0</span>
                 <div class="download-buttons">
-                    <a href="../downloads/windows/Oremos%20Changana%20PT-5.0.0.msi" download><button class="download-oremos-button">Baixar .Msi</button></a>
+                    <a href="../downloads/windows/Oremos%20Changana_PT-5.0.0.msi" download><button class="download-oremos-button">Baixar .Msi</button></a>
                 </div>
             </div>
 
@@ -55,7 +55,7 @@
                 <h3 class="platform-name">Linux</h3>
                 <span>Oremos Changana-PT. Versão: 5.0</span>
                 <div class="download-buttons">
-                    <a href="../downloads/linux/oremos-changana-pt_5.0.0_amd64.deb" download><button class="download-oremos-button">Baixar .Deb</button></a>
+                    <a href="../downloads/linux/Oremos%20changana_PT_5.0.0_amd64.deb" download><button class="download-oremos-button">Baixar .Deb</button></a>
                 </div>
             </div>
 
