Adding desktop realease size label

--- a/pages/download.html
+++ b/pages/download.html
@@ -46,7 +46,7 @@
                 <h3 class="platform-name">Windows</h3>
                 <span>Oremos Changana-PT. Versão: 5.0</span>
                 <div class="download-buttons">
-                    <a href="../downloads/windows/Oremos%20Changana_PT-5.0.0.msi" download><button class="download-oremos-button">Baixar .Msi</button></a>
+                    <a href="../downloads/windows/Oremos%20Changana_PT-5.0.0.msi" download><button class="download-oremos-button">Baixar .Msi (55.2 MB)</button></a>
                 </div>
             </div>
 
@@ -55,7 +55,7 @@
                 <h3 class="platform-name">Linux</h3>
                 <span>Oremos Changana-PT. Versão: 5.0</span>
                 <div class="download-buttons">
-                    <a href="../downloads/linux/Oremos%20changana_PT_5.0.0_amd64.deb" download><button class="download-oremos-button">Baixar .Deb</button></a>
+                    <a href="../downloads/linux/Oremos%20changana_PT_5.0.0_amd64.deb" download><button class="download-oremos-button">Baixar .Deb (49.2 MB)</button></a>
                 </div>
             </div>
 
