Upload v5.1.0 for android

--- a/pages/download.html
+++ b/pages/download.html
@@ -32,12 +32,12 @@
             <div class="platform">
                 <img src="../images/icons/android2.svg" alt="android platform" height="30">
                 <h3 class="platform-name">Android</h3>
-                <span>Oremos Changana-PT. Versão: 5.0</span>
+                <span>Oremos Changana-PT. Versão: 5.1.0</span>
                 <div class="download-buttons">
 
                     <a href="https://play.google.com/store/apps/details?id=com.samuel.oremoschanganapt" target="_blank" download><button id="buttonToPlayStore">Baixar na Play Store</button></a>
 
-                    <a href="../downloads/android/Oremos%20Changana%20PT%20v5.0.apk" download><button class="download-oremos-button">Baixar o APK</button></a>
+                    <a href="../downloads/android/Oremos%20Changana-PT%20v5.1.0.apk" download><button class="download-oremos-button">Baixar o APK</button></a>
                 </div>
             </div>
 
